--- a/rails-migration-reporting/app/views/layouts/application.html.erb
+++ b/rails-migration-reporting/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>RailsMigrationHook</title>
+    <title>RailsMigrationReporting</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
