--- a/overscroll-behavior/src/app/globals.css
+++ b/overscroll-behavior/src/app/globals.css
@@ -60,7 +60,9 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 500px;
+  width: 80%;
+  max-width: 500px;
+  min-width: 200px;
   min-height: 200px;
   border: 1px solid #888;
   border-radius: 10px;
